--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,12 @@
         <div class="container-4">
             <h2>Contact Me for Collaboration</h2>
             <p>Reach out today to discuss your project needs and start collaborating on something amazing!</p>
-        <form class="contact-form">
-            <input type="text" placeholder="Name" required>
-            <input type="email" placeholder="Email" required>
-            <textarea placeholder="Message" rows="5" required></textarea>
-            <button type="submit" class="btn">Send Message</button>
-        </form>
+            <form class="contact-form" action="https://formspree.io/f/meklitanteneh58@gmail.com" method="POST">
+                <input type="text" name="name" placeholder="Name" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <textarea name="message" placeholder="Message" rows="5" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
         <div class="social-icons">
             <a href="https://github.com/maki21-me" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="mailto:meklitanteneh58@gmail.com" title="Email Me"><i class="fas fa-envelope"></i></a>
